// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

import "components/feed/core/proto/v2/wire/content_id.proto";
import "components/feed/core/proto/v2/wire/next_page_token.proto";
import "components/feed/core/proto/v2/wire/web_feed_token.proto";

option optimize_for = LITE_RUNTIME;

message Token {
  optional ContentId parent_id = 2;
  optional WebFeedToken web_feed_token = 1001;
  optional NextPageToken next_page_token = 1002;
  optional bytes in_place_update_token = 1003;
  optional bytes story_token = 1004;
}
